transformation-advisor/wast855-to-wast90/customerorderservicesapp_migrationBundle/pipeline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customerorderservicesapp
  name: customerorderservicesapp
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: customerorderservicesapp
