transformation-advisor/wast855-to-wast90/customerorderservicesapp_migrationBundle/pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: customerorderservicesapp
  name: customerorderservicesapp
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: customerorderservicesapp
    weight: 100
